# GameXO

./: AIPlayer.cpp  AIPlayer.hpp  Board.cpp  Board.hpp  CMakeLists.txt  Game.cpp  Game.hpp  GameXO  Menu.cpp  Menu.hpp  MenuItem.cpp  MenuItem.hpp  OutputInformation.cpp  OutputInformation.hpp  Player.cpp  Player.hpp  Setting.cpp  Setting.hpp  XOGameio.vcxproj  XOGameio.vcxproj.filters  main.cpp  script.sh
Data/: language.json
code/: Board.cpp  Board.hpp  Game.cpp  Game.hpp  Menu.hpp  MenuItem.cpp  OutputInformation.cpp  Player.hpp  Setting.hpp
code/cpp/: AIPlayer.cpp  Board.cpp  Game.cpp  Menu.cpp  MenuItem.cpp  OutputInformation.cpp  Player.cpp  SaveProcess.cpp  Setting.cpp  main.cpp
code/hpp/: AIPlayer.hpp  Board.hpp  Game.hpp  Menu.hpp  MenuItem.hpp  OutputInformation.hpp  Player.hpp  SaveProcess.hpp  Setting.hpp
